# jackmatrix

./: .gitignore  CREDITS  INSTALL  Makefile  Makefile.in  README  README.md  THANKS  TODO  build  build_run  build_run_jackmatrix  build_run~  config.h  config.status  configure  configure.ac  configure.ac~  configure.scan  gui.c  gui.h  jackmatrix.c
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: .gitignore  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  dialogues.c  dialogues.h  gui.c  gui.h  jackmatrix.c  jackmatrix.h
